Simplify model tests